todo-app/charts/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-deployment
  labels:
    app: todo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo
  template:
    metadata:
      labels:
        app: todo
    spec:
      containers:
      - name: todo
        image: todo:0.1
        ports:
        - containerPort: 80
        imagePullPolicy: IfNotPresent
